--- a/portfolioLucas/src/styles.scss
+++ b/portfolioLucas/src/styles.scss
@@ -1,1 +1,22 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 80px;
+  /* Rolagem suave considerando a altura do header*/
+}
+
+::-webkit-scrollbar {
+  background: #363636;
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: orangered;
+  height: 20px;
+  border-radius: 10px;
+}
