Continuacao de ajustes

--- a/portfolioLucas/src/app/layouts/footer/footer.component.html
+++ b/portfolioLucas/src/app/layouts/footer/footer.component.html
@@ -1,1 +1,32 @@
-<p>footer works!</p>
+<footer>
+  <div class="baseboard">
+    <div class="container">
+      <div class="baseboard2">
+        <div class="logo-baseboard">
+          <img src="./../../../assets/images/logo.png" alt="Logo" width="100px">
+        </div>
+        <div>
+          <ul>
+            <li><a href="https://github.com/Terchaki" target="_blank"><i
+                  class="fab fa-github i-github"></i>
+              </a></li>
+            <li><a
+                href="https://www.linkedin.com/in/lucas-henrique-sousa-mendes/"
+                target="_blank">
+                <i class="fab fa-linkedin-in i-linkedin"></i>
+              </a></li>
+            <!--<li><a href=""><i class="fab fa-instagram i-instagram"></i><div class="leitores-tela">Instagram</div></a></li>-->
+            <li><a href="https://wa.me/5564992048816" target="_blank"><i
+                  class="fab fa-whatsapp i-whatsapp"></i>
+              </a></li>
+          </ul>
+          <span class="email"><i class="fas fa-envelope"></i>
+            lucas.dev.contato&#64;outlook.com
+          </span>
+        </div>
+      </div>
+    </div>
+    <hr class="m-0">
+    <p id="nome">© 2025 - Desenvolvido por Lucas Henrique</p>
+  </div>
+</footer>
