--- a/portfolioLucas/src/app/layouts/header/header.component.html
+++ b/portfolioLucas/src/app/layouts/header/header.component.html
@@ -6,11 +6,11 @@
           <p>.Dev</p>
           <p>&lt;/Lucas&gt;</p>
         </a>
-      </div>
-
-      <div id="nav">
-        <button id="btn-menu">MENU<span id="hamburguer"></span></button>
-
+      </div><div id="nav" [class.active]="menuAtivo">
+        <button (click)="alternarMenu($event)"
+          (touchstart)="alternarMenu($event)" id="btn-menu">
+          MENU<span id="hamburguer"></span>
+        </button>
         <ul id="menu">
           <li><a href="#sobre-mim">Sobre mim</a></li>
           <li><a href="#projetos">Projetos</a></li>
@@ -18,6 +18,7 @@
           <li><a href="#experiencia">Experiência</a></li>
         </ul>
       </div>
+
     </div>
   </nav>
 </header>
