--- a/portfolioLucas/src/app/layouts/layout/layout.component.html
+++ b/portfolioLucas/src/app/layouts/layout/layout.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<main>
+<main style="height: 1500px;">
   <router-outlet></router-outlet>
 </main>
-<footer></footer>
+<app-footer></app-footer>
