Reestruturacao de arquivos para a raiz

--- a/src/app/layouts/footer/footer.component.scss
+++ b/src/app/layouts/footer/footer.component.scss
@@ -5,7 +5,7 @@
 
   .baseboard2 {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 
     .logo-baseboard a {
       text-decoration: none;
