--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 // Bootstrap
-@import '~bootstrap/dist/css/bootstrap.min.css';
+@import 'bootstrap/dist/css/bootstrap.min.css';
 
 * {
   margin: 0px;
